application/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  ports:
  - name: http          # 👈 added named port
    port: 80
    targetPort: 5000
  selector:
    app: app
    version: blue       # Initially point to the Blue version
  type: NodePort
