application/netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-mysql-router
  namespace: mysql
spec:
  podSelector:
    matchLabels:
      mysql.oracle.com/component: router
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
      podSelector:
        matchLabels:
          app: app
    ports:
    - protocol: TCP
      port: 6446
